# space_battle

./: Cargo.toml  README.md
assets/bullets/: laser.bullet.ron  rocket.bullet.ron
assets/units/: dragon.ron  dragon.unit.ron  player.ron  player.unit.ron  predator.ron  predator.unit.ron
assets/weapons/: fast_laser.weapon.ron  laser.weapon.ron  rocket_launcher.weapon.ron
game_plugin/: Cargo.toml
game_plugin/src/: audio.rs  combat.rs  countdown.rs  enemy.rs  game_over.rs  game_ui.rs  lib.rs  loading.rs  main_menu.rs  player.rs  prefab.rs  states.rs
game_plugin/src/combat/: components.rs  events.rs  mod.rs  systems.rs
game_plugin/src/combat/components/: cooldown.rs  unit_prefab.rs  weapon.rs
game_plugin/src/components/: mod.rs
game_plugin/src/resources/: mod.rs
game_plugin/src/systems/: mod.rs
src/: main.rs
