[package]
edition = "2021"
name = "space_battle"
version = "0.1.0"

[features]
debug = ["game_plugin/debug", "bevy-inspector-egui"]
default = ["debug"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.7", features = ["dynamic"]}
bevy-inspector-egui = {version = "0.10.0", optional = true}
game_plugin = {path = "game_plugin"}
heron = {version = "3.0", features = ["2d"], default-features = false}

[workspace]
members = [
  "game_plugin",
]
