[package]
edition = "2021"
name = "space_battle"
version = "0.1.0"

[features]
debug = ["game_plugin/debug"]
default = ["debug"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.7", features = ["dynamic"], default-features = false}
game_plugin = {path = "game_plugin"}

[workspace]
members = [
  "game_plugin",
]
