[package]
edition = "2021"
name = "game_plugin"
version = "0.1.0"

[features]
debug = ["bevy-inspector-egui"]
default = []

[dependencies]
bevy = { version = "0.6.1", features = ["dynamic"] }
bevy-inspector-egui = {version = "0.8.2", optional = true}
bevy_rapier2d = "0.12.1"
rand = "0.8.5"
serde = "1.0.136"
