[package]
edition = "2021"
name = "game_plugin"
version = "0.1.0"

[features]
debug = ["bevy-inspector-egui"]
default = []

[dependencies]
anyhow = "1.0.56"
bevy = {version = "0.6.1", features = ["dynamic"]}
bevy-inspector-egui = {version = "0.8.2", optional = true}
bevy_asset_loader = "0.9.0"
bevy_rapier2d = "0.12.1"
rand = "0.8.5"
ron = "0.7.0"
serde = "1.0.136"
