[package]
edition = "2021"
name = "game_plugin"
version = "0.1.0"

[features]
debug = ["bevy-inspector-egui", "heron/debug-2d"]
default = []

[dependencies]
anyhow = "1.0.56"
bevy = {version = "0.7", features = ["dynamic"]}
bevy-inspector-egui = {version = "0.10.0", optional = true}
bevy_asset_loader = "0.10.0"
heron = {version = "3.0", features = ["2d"], default-features = false}
rand = "0.8.5"
ron = "0.7.0"
serde = "1.0.136"
